[gd_scene load_steps=10 format=3 uid="uid://u1i2n3t4e5r6"]

[ext_resource type="Script" path="res://ui.gd" id="1_1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.15, 0.25, 0.98)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0.9, 1, 1)
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.08, 0.2, 0.35, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.8, 1, 0.8)
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.1, 0.25, 0.4, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.7, 1, 0.6)
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
process_mode = 4

[node name="TopLeftPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 420.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TopLeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0

[node name="PlayerInfoLabel" type="Label" parent="UI/TopLeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "üë§ JOGADOR"
horizontal_alignment = 1

[node name="UserInfoLabel" type="Label" parent="UI/TopLeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "-"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="UI/TopLeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "‚≠ê N√≠vel: 1"
horizontal_alignment = 1

[node name="TopRightPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -420.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 280.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TopRightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0

[node name="StatsLabel" type="Label" parent="UI/TopRightPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "üìä ESTAT√çSTICAS"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/TopRightPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "üíé Pontos: 0"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="UI/TopRightPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "ü™ô Moedas: 0"
horizontal_alignment = 1

[node name="ExpLabel" type="Label" parent="UI/TopRightPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.5, 1, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "‚ö° EXP: 0/100"
horizontal_alignment = 1

[node name="QuestionsLabel" type="Label" parent="UI/TopRightPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "‚ùì Perguntas: 0/0 (0%)"
horizontal_alignment = 1

[node name="LivesLabel" type="Label" parent="UI/TopRightPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "‚ù§Ô∏è Vidas: 3"
horizontal_alignment = 1

[node name="BottomLeftPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -180.0
offset_right = 500.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BottomLeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0

[node name="HPLabel" type="Label" parent="UI/BottomLeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "‚ù§Ô∏è VIDA: 5/5"
horizontal_alignment = 1

[node name="HPBarBG" type="ColorRect" parent="UI/BottomLeftPanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)
color = Color(0.15, 0.15, 0.15, 0.9)

[node name="HPBarFill" type="ColorRect" parent="UI/BottomLeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
custom_minimum_size = Vector2(450, 30)
color = Color(0, 1, 0.3, 1)

[node name="HPBarContainer" type="HBoxContainer" parent="UI/BottomLeftPanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 35)

[node name="TutorialPanel" type="Panel" parent="UI"]
visible = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
process_mode = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TutorialPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
process_mode = 4

[node name="TitleLabel" type="Label" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "MATHQUEST"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Jogo Educacional de Plataforma"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0, 0.9, 1, 1)
text = "CONTROLES:"
horizontal_alignment = 1

[node name="Control1" type="Label" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "‚Üê ‚Üí  Mover personagem"
horizontal_alignment = 1

[node name="Control2" type="Label" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "ESPA√áO  Pular"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2

[node name="ObjectiveLabel" type="Label" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0, 1, 0.5, 1)
text = "OBJETIVO:"
horizontal_alignment = 1

[node name="ObjectiveText" type="Label" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "‚Ä¢ Responda perguntas nos portais ciano
‚Ä¢ Acertar = Avan√ßa de fase
‚Ä¢ Errar 2 vezes = Volta ao in√≠cio
‚Ä¢ Colete moedas para pontos
‚Ä¢ Evite os inimigos vermelhos"
autowrap_mode = 3
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="UI/TutorialPanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
process_mode = 4
theme_override_font_sizes/font_size = 24
text = "COME√áAR JOGO"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
process_mode = 4

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "Game Over!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
process_mode = 4
text = "Reiniciar"
